--- a/地球.html
+++ b/地球.html
@@ -81,7 +81,7 @@
     // let material2 = new THREE.MeshPhongMaterial({ color: 0x00ff00 }); //高光Phong材质,与光照有反应
     // let material2 = new THREE.MeshStandardMaterial({ color: 0x00ff00 }); //PBR物理材质，相比较高光Phong材质可以更好的模拟金属、玻璃等效果
     let textureLoader = new THREE.TextureLoader(); // TextureLoader创建一个纹理加载器对象，可以加载图片作为几何体纹理
-    textureLoader.load("/earth.jpg", function (texture) {
+    textureLoader.load("./earth.jpg", function (texture) {
         var material = new THREE.MeshLambertMaterial({
             // color: 0x0000ff,
             // 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
