--- a/map.html
+++ b/map.html
@@ -68,11 +68,21 @@
         position: relative;
         /* border: 1px solid red; */
     }
+    .back {
+        color: #fff;
+        font-weight: bold;
+        font-size: 18px;
+        cursor: pointer;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
 </style>
 
 <body>
     <div id="map">
         <div id="provinceInfo"></div>
+        <div class="back">《返回</div>
     </div>
 </body>
 <script src="index.js"></script>
@@ -88,19 +98,19 @@
                 {
                     value: 1,
                     name: "浙江省",
-                    url: "https://sudos.xrdev.cn/map/zhejiang.json",
+                    url: "./map/浙江省.json",
                     tier: 2
                 },
                 {
                     value: 2,
                     name: "四川省",
-                    url: "https://sudos.xrdev.cn/map/sichuan.json",
+                    url: "./map/四川省.json",
                     tier: 2
                 },
                 {
                     value: 3,
                     name: "山东省",
-                    url: "https://sudos.xrdev.cn/map/shandong.json",
+                    url: "./map/山东省.json",
                     tier: 2
                 }
             ]
@@ -109,6 +119,10 @@
     Scene.createLight(); //光源
     Scene.createCamera({ x: 15, y: 400, z: 120 }); //摄像机
     Scene.createRender(); //渲染器
+    setTimeout(() => {
+        alert(1)
+        Scene.createRender(); //渲染器
+    }, 5000);
     // Scene.cameraHelper(); //光源辅助线
     // Scene.axesHelper(); //坐标辅助线
     // Scene.createPlane(); //平面
